# yew-web-tutorial

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: main.rs  video.rs
