[package]
name = "yew-web-tutorial"
version = "0.21.0"
edition = "2021"

[dependencies]
gloo-net = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
